Validate internal structure when showing complex datatypes (fixes #884)
I opted not to fix the fact that \int_show:N, \dim_show:N etc are
equivalent (hence accept the wrong type of data) because this is messy
to check.

--- a/l3kernel/l3fp-assign.dtx
+++ b/l3kernel/l3fp-assign.dtx
@@ -165,6 +165,7 @@
 % \subsection{Showing values}
 %
 % \begin{macro}{\fp_show:N, \fp_show:c, \fp_log:N, \fp_log:c, \@@_show:NN}
+% \begin{macro}[EXP]{\@@_show_validate:w}
 %   This shows the result of computing its argument by
 %   passing the right data to \cs{tl_show:n} or \cs{tl_log:n}.
 %    \begin{macrocode}
@@ -174,10 +175,25 @@
 \cs_generate_variant:Nn \fp_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
-    \__kernel_chk_defined:NT #2
+    \__kernel_chk_tl_type:NnnT #2 { fp }
+      {
+        \str_if_eq:eeTF { \tl_head:N #2 } { \s_@@_tuple } { \exp_not:o #2 }
+          {
+            \exp_after:wN \@@_show_validate:w #2
+            \s_@@ \@@_chk:w ??? ; \s_@@_stop
+          }
+      }
       { \exp_args:Nx #1 { \token_to_str:N #2 = \fp_to_tl:N #2 } }
   }
+\cs_new:Npn \@@_show_validate:w
+    #1 \s_@@ \@@_chk:w #2#3#4#5 ; #6 \s_@@_stop
+  {
+    \token_if_eq_meaning:NNTF #2 1
+      { \s_@@ \@@_chk:w #2 #3 {#4} #5 ; }
+      { \s_@@ \@@_chk:w #2 #3 #4 #5 ; }
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\fp_show:n, \fp_log:n}
