--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -92,6 +92,19 @@
 %   purposes.
 % \end{function}
 %
+% \begin{function}{\__kernel_chk_tl_type:NnnT}
+%   \begin{syntax}
+%     \cs{__kernel_chk_tl_type:NnnT} \meta{control sequence} \Arg{specific type} \\
+%     \ \ \Arg{reconstruction} \Arg{true code}
+%   \end{syntax}
+%   Helper to test that the \meta{control sequence} is a variable of the
+%   given \meta{specific type} of token list.  Produces suitable error
+%   messages if the \meta{control sequence} does not exist, or if it is
+%   not a token list variable at all, or if the \meta{control sequence}
+%   differs from the result of |x|-expanding \meta{reconstruction}.  If
+%   all of these tests succeed then the \meta{true code} is run.
+% \end{function}
+%
 % \begin{function}{\__kernel_cs_parm_from_arg_count:nnF}
 %   \begin{syntax}
 %     \cs{__kernel_cs_parm_from_arg_count:nnF} \Arg{follow-on} \Arg{args} \Arg{false code}
