--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -313,7 +313,7 @@
 %   based on this result.
 % \end{function}
 %
-% \begin{function}[added = 2012-02-09, updated = 2015-08-01]{\bool_show:N, \bool_show:c}
+% \begin{function}[added = 2012-02-09, updated = 2021-04-29]{\bool_show:N, \bool_show:c}
 %   \begin{syntax}
 %     \cs{bool_show:N} \meta{boolean}
 %   \end{syntax}
@@ -328,7 +328,7 @@
 %   terminal.
 % \end{function}
 %
-% \begin{function}[added = 2014-08-22, updated = 2015-08-03]{\bool_log:N, \bool_log:c}
+% \begin{function}[added = 2014-08-22, updated = 2021-04-29]{\bool_log:N, \bool_log:c}
 %   \begin{syntax}
 %     \cs{bool_log:N} \meta{boolean}
 %   \end{syntax}
@@ -987,7 +987,17 @@
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
     \__kernel_chk_defined:NT #2
-      { \exp_args:Nx #1 { \token_to_str:N #2 = \@@_to_str:n {#2} } }
+      {
+        \token_case_meaning:NnF #2
+          {
+            \c_true_bool { \exp_args:Nx #1 { \token_to_str:N #2 = true } }
+            \c_false_bool { \exp_args:Nx #1 { \token_to_str:N #2 = false } }
+          }
+          {
+            \__kernel_msg_error:nnxxx { kernel } { bad-type }
+              { \token_to_str:N #2 } { \token_to_meaning:N #2 } { bool }
+          }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
