--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -480,14 +480,14 @@
 %
 % \section{Viewing property lists}
 %
-% \begin{function}[updated = 2015-08-01]{\prop_show:N, \prop_show:c}
+% \begin{function}[updated = 2021-04-29]{\prop_show:N, \prop_show:c}
 %   \begin{syntax}
 %     \cs{prop_show:N} \meta{property list}
 %   \end{syntax}
 %   Displays the entries in the \meta{property list} in the terminal.
 % \end{function}
 %
-% \begin{function}[added = 2014-08-12, updated = 2015-08-01]{\prop_log:N, \prop_log:c}
+% \begin{function}[added = 2014-08-12, updated = 2021-04-29]{\prop_log:N, \prop_log:c}
 %   \begin{syntax}
 %     \cs{prop_log:N} \meta{property list}
 %   \end{syntax}
@@ -1346,8 +1346,10 @@
 %
 % \begin{macro}[tested = m3show001]
 %   {\prop_show:N, \prop_show:c, \prop_log:N, \prop_log:c}
-%   Apply the general \cs{__kernel_chk_defined:NT} and
-%   \cs{msg_show:nnnnnn}. Contrarily to sequences and comma lists,
+% \begin{macro}{\@@_show:NN}
+% \begin{macro}[rEXP]{\@@_show_validate:w}
+%   Apply the general \cs{__kernel_chk_tl_type:NnnT}.
+%   Contrarily to sequences and comma lists,
 %   we use \cs{msg_show_item:nn} to format both the key and the value
 %   for each pair.
 %    \begin{macrocode}
@@ -1357,7 +1359,12 @@
 \cs_generate_variant:Nn \prop_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
-    \__kernel_chk_defined:NT #2
+    \__kernel_chk_tl_type:NnnT #2 { prop }
+      {
+        \s_@@
+        \exp_after:wN \use_i:nn \exp_after:wN \@@_show_validate:w #2
+        \@@_pair:wn \q_recursion_tail \s_@@ { } \q_recursion_stop
+      }
       {
         #1 { prop } { show }
           { \token_to_str:N #2 }
@@ -1365,7 +1372,15 @@
           { } { }
       }
   }
+\cs_new:Npn \@@_show_validate:w #1 \@@_pair:wn #2 \s_@@ #3
+  {
+    \quark_if_recursion_tail_stop:n {#2}
+    \exp_not:N \@@_pair:wn \tl_to_str:n {#2} \s_@@ \exp_not:n { {#3} }
+    \@@_show_validate:w
+  }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
