--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -797,7 +797,7 @@
 %
 % \section{Viewing strings}
 %
-% \begin{function}[added = 2015-09-18]
+% \begin{function}[added = 2015-09-18, updated = 2021-04-29]
 %   {\str_show:N, \str_show:c, \str_show:n}
 %   \begin{syntax}
 %     \cs{str_show:N} \meta{str~var}
@@ -805,7 +805,7 @@
 %   Displays the content of the \meta{str~var} on the terminal.
 % \end{function}
 %
-% \begin{function}[added = 2019-02-15]
+% \begin{function}[added = 2019-02-15, updated = 2021-04-29]
 %   {\str_log:N, \str_log:c, \str_log:n}
 %   \begin{syntax}
 %     \cs{str_log:N} \meta{str~var}
@@ -1983,10 +1983,18 @@
 %   Displays a string on the terminal.
 %    \begin{macrocode}
 \cs_new_eq:NN \str_show:n \tl_show:n
-\cs_new_eq:NN \str_show:N \tl_show:N
+\cs_new_protected:Npn \str_show:N #1
+  {
+    \__kernel_chk_tl_type:NnnT #1 { str } { \tl_to_str:N #1 }
+      { \tl_show:N #1 }
+  }
 \cs_generate_variant:Nn \str_show:N { c }
 \cs_new_eq:NN \str_log:n \tl_log:n
-\cs_new_eq:NN \str_log:N \tl_log:N
+\cs_new_protected:Npn \str_log:N #1
+  {
+    \__kernel_chk_tl_type:NnnT #1 { str } { \tl_to_str:N #1 }
+      { \tl_log:N #1 }
+  }
 \cs_generate_variant:Nn \str_log:N { c }
 %    \end{macrocode}
 % \end{macro}
