--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1169,7 +1169,7 @@
 %
 % \section{Viewing token lists}
 %
-% \begin{function}[updated = 2015-08-01]{\tl_show:N, \tl_show:c}
+% \begin{function}[updated = 2021-04-29]{\tl_show:N, \tl_show:c}
 %   \begin{syntax}
 %     \cs{tl_show:N} \meta{tl~var}
 %   \end{syntax}
@@ -1191,7 +1191,7 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[added = 2014-08-22, updated = 2015-08-01]{\tl_log:N, \tl_log:c}
+% \begin{function}[added = 2014-08-22, updated = 2021-04-29]{\tl_log:N, \tl_log:c}
 %   \begin{syntax}
 %     \cs{tl_log:N} \meta{tl~var}
 %   \end{syntax}
@@ -3531,8 +3531,16 @@
   {
     \__kernel_chk_defined:NT #2
       {
-        \exp_args:Ne #1
-          { \token_to_str:N #2 = \__kernel_exp_not:w \exp_after:wN {#2} }
+        \exp_args:Nf \tl_if_empty:nTF
+          { \cs_prefix_spec:N #2 \cs_argument_spec:N #2 }
+          {
+            \exp_args:Ne #1
+              { \token_to_str:N #2 = \__kernel_exp_not:w \exp_after:wN {#2} }
+          }
+          {
+            \__kernel_msg_error:nnxxx { kernel } { bad-type }
+              { \token_to_str:N #2 } { \token_to_meaning:N #2 } { tl }
+          }
       }
   }
 %    \end{macrocode}
@@ -3581,6 +3589,40 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_log:n #1
   { \iow_wrap:nnnN { > ~ \tl_to_str:n {#1} . } { } { } \iow_log:n }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\__kernel_chk_tl_type:NnnT}
+%   Helper for checking that |#1| has the correct internal structure to
+%   be of a certain type.  Make sure that it is defined and that it is a
+%   token list, namely a macro with no \tn{long} nor \tn{protected}
+%   prefix.  Then compare |#1| to an attempt at reconstructing a valid
+%   structure of the given type using |#2| (see implementation of
+%   \cs{seq_show:N} for instance).  If that is successful run the
+%   requested code~|#4|.
+%    \begin{macrocode}
+\cs_new_protected:Npn \__kernel_chk_tl_type:NnnT #1#2#3#4
+  {
+    \__kernel_chk_defined:NT #1
+      {
+        \exp_args:Nf \tl_if_empty:nTF
+          { \cs_prefix_spec:N #1 \cs_argument_spec:N #1 }
+          {
+            \tl_set:Nx \l_@@_internal_a_tl {#3}
+            \tl_if_eq:NNTF #1 \l_@@_internal_a_tl
+              {#4}
+              {
+                \__kernel_msg_error:nnxxxx { kernel } { bad-type }
+                  { \token_to_str:N #1 } { \tl_to_str:N #1 }
+                  {#2} { \tl_to_str:N \l_@@_internal_a_tl }
+              }
+          }
+          {
+            \__kernel_msg_error:nnxxx { kernel } { bad-type }
+              { \token_to_str:N #1 } { \token_to_meaning:N #1 } {#2}
+          }
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
