--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -703,7 +703,7 @@
 %
 % \section{Viewing comma lists}
 %
-% \begin{function}[updated = 2015-08-03]{\clist_show:N, \clist_show:c}
+% \begin{function}[updated = 2021-04-29]{\clist_show:N, \clist_show:c}
 %   \begin{syntax}
 %     \cs{clist_show:N} \meta{comma list}
 %   \end{syntax}
@@ -717,7 +717,7 @@
 %   Displays the entries in the comma list in the terminal.
 % \end{function}
 %
-% \begin{function}[added = 2014-08-22, updated = 2015-08-03]{\clist_log:N, \clist_log:c}
+% \begin{function}[added = 2014-08-22, updated = 2021-04-29]{\clist_log:N, \clist_log:c}
 %   \begin{syntax}
 %     \cs{clist_log:N} \meta{comma list}
 %   \end{syntax}
@@ -2009,8 +2009,9 @@
 % \subsection{Viewing comma lists}
 %
 % \begin{macro}{\clist_show:N, \clist_show:c, \clist_log:N, \clist_log:c, \@@_show:NN}
-%   Apply the general \cs{__kernel_chk_defined:NT} and
-%   \cs{msg_show:nnnnnn}.
+%   Apply the general \cs{__kernel_chk_tl_type:NnnT} with \cs{exp_not:o}
+%   |#2| serving as a dummy code to prevent a check performed by this
+%   auxiliary.
 %    \begin{macrocode}
 \cs_new_protected:Npn \clist_show:N { \@@_show:NN \__kernel_msg_show:nnxxxx }
 \cs_generate_variant:Nn \clist_show:N { c }
@@ -2018,12 +2019,20 @@
 \cs_generate_variant:Nn \clist_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
-    \__kernel_chk_defined:NT #2
+    \__kernel_chk_tl_type:NnnT #2 { clist } { \exp_not:o #2 }
       {
-        #1 { clist } { show }
-          { \token_to_str:N #2 }
-          { \clist_map_function:NN #2 \msg_show_item:n }
-          { } { }
+        \int_compare:nNnTF { \clist_count:N #2 }
+          = { \exp_args:No \clist_count:n #2 }
+          {
+            #1 { clist } { show }
+              { \token_to_str:N #2 }
+              { \clist_map_function:NN #2 \msg_show_item:n }
+              { } { }
+          }
+          {
+            \__kernel_msg_error:nnxx { kernel } { non-clist }
+              { \token_to_str:N #2 } { \tl_to_str:N #2 }
+          }
       }
   }
 %    \end{macrocode}
