--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -544,7 +544,7 @@
 %   which never change.
 % \end{function}
 %
-% \begin{function}[added = 2021-04-26]
+% \begin{function}[added = 2021-04-26, updated = 2021-04-29]
 %   {\regex_show:N, \regex_show:n, \regex_log:N, \regex_log:n}
 %   \begin{syntax}
 %     \cs{regex_show:n} \Arg{regex}
@@ -3626,6 +3626,160 @@
 %
 % \subsubsection{Showing regexes}
 %
+% \begin{macro}[rEXP]
+%   {
+%     \@@_clean_bool:n, \@@_clean_int:n, \@@_clean_int_aux:N,
+%     \@@_clean_regex:n, \@@_clean_regex_loop:w, \@@_clean_branch:n,
+%     \@@_clean_branch_loop:n, \@@_clean_assertion:Nn,
+%     \@@_clean_class:NnnnN, \@@_clean_group:nnnN, \@@_clean_class:n,
+%     \@@_clean_class_loop:nnn, \@@_clean_exact_cs:n,
+%     \@@_clean_exact_cs:w
+%   }
+%   Before showing a regex we check that it is \enquote{clean} in the
+%   sense that it has the correct internal structure.  We do this (in
+%   the implementation of \cs{regex_show:N} and \cs{regex_log:N}) by
+%   comparing it with a cleaned-up version of the same regex.  Along the
+%   way we also need similar functions for other types: all
+%   \cs[no-index]{@@_clean_\meta{type}:n} functions produce valid
+%   \meta{type} tokens (bool, explicit integer, etc.\@) from arbitrary
+%   input, and the output coincides with the input if that was valid.
+%    \begin{macrocode}
+\cs_new:Npn \@@_clean_bool:n #1
+  {
+    \tl_if_single:nTF {#1}
+      { \bool_if:NTF #1 \c_true_bool \c_false_bool }
+      { \c_true_bool }
+  }
+\cs_new:Npn \@@_clean_int:n #1
+  {
+    \tl_if_head_eq_meaning:nNTF {#1} -
+      { - \exp_args:No \@@_clean_int:n { \use_none:n #1 } }
+      { \int_eval:n { 0 \str_map_function:nN {#1} \@@_clean_int_aux:N } }
+  }
+\cs_new:Npn \@@_clean_int_aux:N #1
+  {
+    \if_int_compare:w 1 < 1 #1 ~
+      #1
+    \else:
+      \exp_after:wN \str_map_break:
+    \fi:
+  }
+\cs_new:Npn \@@_clean_regex:n #1
+  {
+    \@@_clean_regex_loop:w #1
+    \@@_branch:n { \q_recursion_tail } \q_recursion_stop
+  }
+\cs_new:Npn \@@_clean_regex_loop:w #1 \@@_branch:n #2
+  {
+    \quark_if_recursion_tail_stop:n {#2}
+    \@@_branch:n { \@@_clean_branch:n {#2} }
+    \@@_clean_regex_loop:w
+  }
+\cs_new:Npn \@@_clean_branch:n #1
+  {
+    \@@_clean_branch_loop:n #1
+    ? ? ? ? ? ? \prg_break_point:
+  }
+\cs_new:Npn \@@_clean_branch_loop:n #1
+  {
+    \tl_if_single:nF {#1} { \prg_break: }
+    \token_case_meaning:NnF #1
+      {
+        \@@_command_K: { #1 \@@_clean_branch_loop:n }
+        \@@_assertion:Nn { #1 \@@_clean_assertion:Nn }
+        \@@_class:NnnnN { #1 \@@_clean_class:NnnnN }
+        \@@_group:nnnN { #1 \@@_clean_group:nnnN }
+        \@@_group_no_capture:nnnN { #1 \@@_clean_group:nnnN }
+        \@@_group_resetting:nnnN { #1 \@@_clean_group:nnnN }
+      }
+      { \prg_break: }
+  }
+\cs_new:Npn \@@_clean_assertion:Nn #1#2
+  {
+    \@@_clean_bool:n {#1}
+    \tl_if_single:nF {#2} { { \@@_A_test: } \prg_break: }
+    \token_case_meaning:NnTF #2
+      {
+        \@@_A_test: { }
+        \@@_G_test: { }
+        \@@_Z_test: { }
+        \@@_b_test: { }
+      }
+      { {#2} }
+      { { \@@_A_test: } \prg_break: }
+    \@@_clean_branch_loop:n
+  }
+\cs_new:Npn \@@_clean_class:NnnnN #1#2#3#4#5
+  {
+    \@@_clean_bool:n {#1}
+    { \@@_clean_class:n {#2} }
+    { \int_max:nn { 0 } { \@@_clean_int:n {#3} } }
+    { \int_max:nn { -1 } { \@@_clean_int:n {#4} } }
+    \@@_clean_bool:n {#5}
+    \@@_clean_branch_loop:n
+  }
+\cs_new:Npn \@@_clean_group:nnnN #1#2#3#4
+  {
+    { \@@_clean_regex:n {#1} }
+    { \int_max:nn { 0 } { \@@_clean_int:n {#2} } }
+    { \int_max:nn { -1 } { \@@_clean_int:n {#3} } }
+    \@@_clean_bool:n {#4}
+    \@@_clean_branch_loop:n
+  }
+\cs_new:Npn \@@_clean_class:n #1
+  { \@@_clean_class_loop:nnn #1 ????? \prg_break_point: }
+\cs_new:Npn \@@_clean_class_loop:nnn #1#2#3
+  {
+    \tl_if_single:nF {#1} { \prg_break: }
+    \token_case_meaning:NnTF #1
+      {
+        \@@_item_cs:n { #1 { \@@_clean_regex:n {#2} } }
+        \@@_item_exact_cs:n { #1 { \@@_clean_exact_cs:n {#2} } }
+        \@@_item_caseful_equal:n { #1 { \@@_clean_int:n {#2} } }
+        \@@_item_caseless_equal:n { #1 { \@@_clean_int:n {#2} } }
+        \@@_item_reverse:n { #1 { \@@_clean_class:n {#2} } }
+      }
+      { \@@_clean_class_loop:nnn {#3} }
+      {
+        \token_case_meaning:NnTF #1
+          {
+            \@@_item_caseful_range:nn { }
+            \@@_item_caseless_range:nn { }
+            \@@_item_exact:nn { }
+          }
+          { #1 { \@@_clean_int:n {#2} } { \@@_clean_int:n {#3} } }
+          {
+            \token_case_meaning:NnTF #1
+              {
+                \@@_item_catcode:nT { }
+                \@@_item_catcode_reverse:nT { }
+              }
+              {
+                #1 { \@@_clean_int:n {#2} } { \@@_clean_class:n {#3} }
+                \@@_clean_class_loop:nnn
+              }
+              { \prg_break: }
+          }
+      }
+  }
+\cs_new:Npn \@@_clean_exact_cs:n #1
+  {
+    \exp_last_unbraced:Nf \use_none:n
+      {
+        \@@_clean_exact_cs:w #1
+        \scan_stop: \q_recursion_tail \scan_stop:
+        \q_recursion_stop
+      }
+  }
+\cs_new:Npn \@@_clean_exact_cs:w #1 \scan_stop:
+  {
+    \quark_if_recursion_tail_stop:n {#1}
+    \scan_stop: \tl_to_str:n {#1}
+    \@@_clean_exact_cs:w
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\@@_show:N}
 %   Within a group and within \cs{tl_build_begin:N} \ldots{} \cs{tl_build_end:N} we
 %   redefine all the function that can appear in a compiled regex, then
@@ -6045,7 +6199,8 @@
 \cs_new_protected:Npn \regex_log:N { \@@_show:NN \__kernel_msg_log:nnxxxx }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
-    \__kernel_chk_defined:NT #2
+    \__kernel_chk_tl_type:NnnT #2 { regex }
+      { \exp_args:No \@@_clean_regex:n {#2} }
       {
         \@@_show:N #2
         #1 { regex } { show }
