--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -408,67 +408,34 @@
 % below remain in effect after the loop.
 %
 % \begin{function}[added = 2017-11-14, rEXP]
-%   {\str_map_function:NN, \str_map_function:cN}
-%   \begin{syntax}
-%     \cs{str_map_function:NN} \meta{str~var} \meta{function}
-%   \end{syntax}
-%   Applies \meta{function} to every \meta{character} in the
-%   \meta{str~var} including spaces.
-%   See also \cs{str_map_function:nN}.
-% \end{function}
-%
-% \begin{function}[added = 2017-11-14, rEXP]
-%   {\str_map_function:nN}
+%   {\str_map_function:nN, \str_map_function:NN, \str_map_function:cN}
 %   \begin{syntax}
 %     \cs{str_map_function:nN} \Arg{token list} \meta{function}
+%     \cs{str_map_function:NN} \meta{str~var} \meta{function}
 %   \end{syntax}
 %   Converts the \meta{token list} to a \meta{string} then
 %   applies \meta{function} to every \meta{character} in the
 %   \meta{string} including spaces.
-%   See also \cs{str_map_function:NN}.
 % \end{function}
 %
 % \begin{function}[added = 2017-11-14]
-%   {\str_map_inline:Nn, \str_map_inline:cn}
-%   \begin{syntax}
-%     \cs{str_map_inline:Nn} \meta{str~var} \Arg{inline function}
-%   \end{syntax}
-%   Applies the \meta{inline function} to every \meta{character} in the
-%   \meta{str~var} including spaces.
-%   The \meta{inline function} should consist of code which
-%   receives the \meta{character} as |#1|. See also \cs{str_map_function:NN}.
-% \end{function}
-%
-% \begin{function}[added = 2017-11-14]
-%   {\str_map_inline:nn}
+%   {\str_map_inline:nn, \str_map_inline:Nn, \str_map_inline:cn}
 %   \begin{syntax}
 %     \cs{str_map_inline:nn} \Arg{token list} \Arg{inline function}
+%     \cs{str_map_inline:Nn} \meta{str~var} \Arg{inline function}
 %   \end{syntax}
 %   Converts the \meta{token list} to a \meta{string} then
 %   applies the \meta{inline function} to every \meta{character} in the
-%   \meta{string} including spaces.
+%   \meta{str~var} including spaces.
 %   The \meta{inline function} should consist of code which
-%   receives the \meta{character} as |#1|. See also \cs{str_map_function:NN}.
+%   receives the \meta{character} as |#1|.
 % \end{function}
 %
 % \begin{function}[added = 2017-11-14]
-%   {\str_map_variable:NNn, \str_map_variable:cNn}
-%   \begin{syntax}
-%     \cs{str_map_variable:NNn} \meta{str~var} \meta{variable} \Arg{code}
-%   \end{syntax}
-%   Stores each \meta{character} of the \meta{string} (including spaces)
-%   in turn in the (string or token list) \meta{variable} and applies
-%   the \meta{code}.  The \meta{code} will usually make use of the
-%   \meta{variable}, but this is not enforced.  The assignments to the
-%   \meta{variable} are local.  Its value after the loop is the last
-%   \meta{character} in the \meta{string}, or its original value if the
-%   \meta{string} is empty.  See also \cs{str_map_inline:Nn}.
-% \end{function}
-%
-% \begin{function}[added = 2017-11-14]
-%   {\str_map_variable:nNn}
+%   {\str_map_variable:nNn, \str_map_variable:NNn, \str_map_variable:cNn}
 %   \begin{syntax}
 %     \cs{str_map_variable:nNn} \Arg{token list} \meta{variable} \Arg{code}
+%     \cs{str_map_variable:NNn} \meta{str~var} \meta{variable} \Arg{code}
 %   \end{syntax}
 %   Converts the \meta{token list} to a \meta{string} then stores each
 %   \meta{character} in the \meta{string} (including spaces) in turn in
