--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1080,6 +1080,15 @@
 %     \cs{peek_regex:nTF} as control sequences, while functions that
 %     inspect individual tokens (for instance \cs{peek_charcode:NTF})
 %     only take into account their meaning.
+%
+%     The \cs{peek_regex:nTF} function only inspects as few tokens as
+%     necessary to determine whether the regular expression matches.
+%     For instance \cs{peek_regex:nTF} \verb"{ abc | [a-z] }" |{ } { }|
+%     |abc| will only inspect the first token~|a| even though the first
+%     branch |abc| of the alternative is preferred in functions such as
+%     \cs{peek_regex_remove_once:n}.  This may have an effect on
+%     tokenization if the input stream has not yet been tokenized and
+%     category codes are changed.
 %   \end{texnote}
 % \end{function}
 %
