--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -350,6 +350,11 @@
 %     Otherwise, spaces (and tabs) are retained at both ends of the
 %     single-line string, as if it appeared in the middle of a line
 %     read from a file.
+%
+%     Contrarily to the \tn{scantokens} primitive, \cs{tl_rescan:nn}
+%     tokenizes the whole string in the same category code regime rather
+%     than one token at a time, so that directives such as \tn{verb}
+%     that rely on changing category codes will not function properly.
 %   \end{texnote}
 % \end{function}
 %
