--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1295,7 +1295,7 @@
 %   enabled) this runs some checks that constants would fail.
 %    \begin{macrocode}
 \cs_new_protected:Npn \int_const:Nn #1#2
-  { \exp_args:Ne \@@_const:nN { \int_eval:n {#2} } #1 }
+  { \exp_args:Nx \@@_const:nN { \int_eval:n {#2} } #1 }
 \cs_new_protected:Npn \@@_const:nN #1#2
   {
     \int_compare:nNnTF {#1} < \c_zero_int
