--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1088,6 +1088,11 @@
     \keys_set:nV {#1} \l_@@_options_clist
     \bool_if:NF \l_@@_log_bool
       { \msg_redirect_module:nnn { LaTeX / #1 } { info } { none } }
+    \cs_new_protected:Npn \@@_unknown_argument_type_error:n ##1
+      {
+        \__kernel_msg_error:nnxx {#1} { unknown-argument-type }
+          { \@@_environment_or_command: } { \tl_to_str:n {##1} }
+      }
   }
 \msg_if_exist:nnTF { cmd } { define-command }
   { \@@_tmp:w { cmd } }
@@ -1109,8 +1114,7 @@
     \int_incr:N \l_@@_current_arg_int
     \cs_if_exist_use:cF { @@_normalize_type_ \tl_to_str:n {#1} :w }
       {
-        \__kernel_msg_error:nnxx { ltcmd } { unknown-argument-type }
-          { \@@_environment_or_command: } { \tl_to_str:n {#1} }
+        \@@_unknown_argument_type_error:n {#1}
         \@@_bad_def:wn
       }
   }
