--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -487,7 +487,7 @@
       }
       {
         \tl_if_blank:nF {#1}
-          { \tl_set:Nn \g_@@_backend_tl {#1} }
+          { \tl_gset:Nn \g_@@_backend_tl {#1} }
         \@@_load_backend_check:N \g_@@_backend_tl
         \str_const:Nx \c_sys_backend_str { \g_@@_backend_tl }
         \__kernel_sys_configuration_load:n
