--- a/l3experimental/l3graphics/l3graphics.dtx
+++ b/l3experimental/l3graphics/l3graphics.dtx
@@ -306,7 +306,7 @@
 \cs_new_protected:Npn \graphics_bb_save:n #1
   {
     \dim_if_exist:cTF { c_@@_ #1 _urx_dim }
-      { \__kernel_msg_error:nnn { graphic } { bb-already-cached } {#1} }
+      { \msg_error:nnn { graphic } { bb-already-cached } {#1} }
       {
         \dim_compare:nNnF \l_graphics_llx_dim = { 0pt }
           { \dim_const:cn { c_@@_ #1 _llx_dim } { \l_graphics_llx_dim } }
@@ -408,7 +408,7 @@
   {
     #1
     \exp_not:N \ior_if_eof:NTF \exp_not:N \l_@@_tmp_ior
-      { \__kernel_msg_error:nnn { graphics } {#2} {#3} }
+      { \msg_error:nnn { graphics } {#2} {#3} }
       {
         \ior_str_map_inline:Nn \exp_not:N \l_@@_tmp_ior
           {
@@ -573,7 +573,7 @@
           { \seq_map_break:n { \use_i:nnn \@@_include: } }
       }
     \use:n
-      { \__kernel_msg_error:nnn { graphics } { graphic-not-found } {#1} }
+      { \msg_error:nnn { graphics } { graphic-not-found } {#1} }
   }
 \cs_new_protected:Npn \@@_include:
   {
@@ -594,7 +594,7 @@
           \exp_args:Ne \@@_include_auxi:n
             { \str_foldcase:n {#1} }
         }
-        { \__kernel_msg_error:nnn { graphics } { graphic-not-found } {#1} }
+        { \msg_error:nnn { graphics } { graphic-not-found } {#1} }
     \group_end:
   }
 \cs_new_protected:Npn \@@_include_auxi:n #1
@@ -621,7 +621,7 @@
           { \@@_include_auxiv:n }
             {#1}
       }
-      { \__kernel_msg_error:nnn { graphics } { unsupported-graphic-type } {#1} }
+      { \msg_error:nnn { graphics } { unsupported-graphic-type } {#1} }
   }
 \cs_new_protected:Npn \@@_include_auxiii:n #1
   {
@@ -692,19 +692,19 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { graphics } { graphic-not-found }
+\msg_new:nnnn { graphics } { graphic-not-found }
   { Image~file~'#1'~not~found. }
   {
     LaTeX~tried~to~open~graphic~file~'#1',
     ~but~the~file~could~not~be~read.
   }
-\__kernel_msg_new:nnnn { graphics } { pipe-failed }
+\msg_new:nnnn { graphics } { pipe-failed }
   { Cannot~run~piped~system~commands. }
   {
     LaTeX~tried~to~call~a~system~process~but~this~was~not~possible.\\
     Try~the~"--shell-escape"~(or~"--enable-pipes")~option.
   }
-\__kernel_msg_new:nnnn { graphics } { unsupported-graphic-type }
+\msg_new:nnnn { graphics } { unsupported-graphic-type }
   { Image~type~'#1'~not~supported~by~current~driver. }
   {
     LaTeX~was~asked~to~include~an~graphic~of~type~'#1',~
