--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1983,14 +1983,14 @@
       { \galley_vspace_set_single:n {#1} }
       {
         \dim_compare:nNnT
-          { \tex_glueexpr:D \g_@@_interpar_vspace_user_tl } 
+          { \tex_glueexpr:D \g_@@_interpar_vspace_user_tl }
             < { \tex_glueexpr:D (#1) \scan_stop: }
           { \galley_vspace_set_single:n {#1} }
       }
   }
 %    \end{macrocode}
 % \end{macro}
-% 
+%
 %
 % \begin{macro}{\parskip}
 %   For the package, the \cs{parskip} primitive is moved out of the
@@ -2126,7 +2126,7 @@
 \cs_new_protected:Npn \galley_break_line:Nn #1#2
   {
     \mode_if_vertical:TF
-      { \__kernel_msg_error:nn { galley } { no-line-to-end } }
+      { \msg_error:nn { galley } { no-line-to-end } }
       {
         \tex_unskip:D
         \bool_if:NF #1
@@ -2458,7 +2458,7 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnn { galley } { no-line-to-end }
+\msg_new:nnn { galley } { no-line-to-end }
   { There's~no~line~here~to~end. }
 %    \end{macrocode}
 %
